--- a/app/views/app-editarDivisa.html
+++ b/app/views/app-editarDivisa.html
@@ -14,9 +14,9 @@
         <label for="Nombre3">Nombre:</label>
         <input id="Nombre3" type="text" name="desc" ng-model="currenciesEd.name" required /><br />
         <label for="unit3">Cambio:</label>
-        <input id="unit3" type="number" name="desc" ng-model="currenciesEd.unit" required /><br />
+        <input id="unit3" type="number" name="unit" ng-model="currenciesEd.unit" required /><br />
         <br />
-        <input type="submit" value="Save" class="btn btn-primary">
+        <input type="submit" value="Guardar" class="btn btn-primary">
       </form>
       <br />
   </div>
