--- a/app/views/app-editarImpuesto.html
+++ b/app/views/app-editarImpuesto.html
@@ -12,10 +12,10 @@
         <label for="Nombre">Nombre:</label>
         <input id="Nombre" type="text" name="nombre" ng-model="taxesEd.name" required /><br />
         <label for="porc">Porcentage:</label>
-        <input id="porc" type="text" name="desc" ng-model="taxesEd.percentage" required /><br />
+        <input id="porc" type="text" name="porc" ng-model="taxesEd.percentage" required /><br />
         
         <br />
-        <input type="submit" value="Save" class="btn btn-primary">
+        <input type="submit" value="Guardar" class="btn btn-primary">
       </form>
       <br />
   </div>
