--- a/app/views/app-editarPrecio.html
+++ b/app/views/app-editarPrecio.html
@@ -9,13 +9,13 @@
   </div>
   <div class="tab-content">
       <form name="personForm2"  ng-submit="editPrices()">
-        <label for="Divisa">Nombre:</label>
-        <input id="Divisa" type="text" name="nombre" ng-model="pricesEd.name" required /><br />
-        <label for="Nombre">Descrpci&oacute;n:</label>
-        <input id="Nombre" type="text" name="desc" ng-model="pricesEd.description" required /><br />
+        <label for="nomPreEd">Nombre:</label>
+        <input id="nomPreEd" type="text" name="nombre" ng-model="pricesEd.name" required /><br />
+        <label for="desPreEd">Descrpci&oacute;n:</label>
+        <input id="desPreEd" type="text" name="desc" ng-model="pricesEd.description" required /><br />
         
         <br />
-        <input type="submit" value="Save" class="btn btn-primary">
+        <input type="submit" value="Guardar" class="btn btn-primary">
       </form>
       <br />
   </div>
