--- a/app/views/app-nuevaMarca.html
+++ b/app/views/app-nuevaMarca.html
@@ -6,17 +6,12 @@
   </ol>
   <div class="page-heading">
     <h1>Nueva Marca</h1>
-    <div class="options">
-        <div class="btn-toolbar">
-            <a href="#" class="btn btn-default"><i class="fa fa-fw fa-wrench"></i></a>
-        </div>
-    </div>
   </div>
   <div class="tab-content">
     <h1>Formulario para crear marca</h1>
       <form>
             <input type="text" ng-model="formData.name" placeholder="Nombre" />
-            <button type="submit" class="btn btn-primary" ng-click="sub(formData)">Submit</button>
+            <button type="submit" class="btn btn-primary" ng-click="sub(formData)">Guardar</button>
       </form>
       <br />
   </div>
