--- a/app/views/app-nuevaOrdenC.html
+++ b/app/views/app-nuevaOrdenC.html
@@ -56,7 +56,7 @@ hr{    border-top-color: #455A64}
               <div class="form-group">
                 <div class="row">
                   <div class="col-md-2">
-                    <label for="productSupp">Fecha:</label>
+                    <label for="productDate">Fecha:</label>
                   </div>
                   <div class="col-md-10">
                     <div class="input-group">
