--- a/app/views/app-nuevoAlmacen.html
+++ b/app/views/app-nuevoAlmacen.html
@@ -5,14 +5,9 @@
   </ol>
   <div class="page-heading">
     <h1>Nuevo Locacion</h1>
-    <div class="options">
-        <div class="btn-toolbar">
-            <a href="#" class="btn btn-default"><i class="fa fa-fw fa-wrench"></i></a>
-        </div>
-    </div>
   </div>
   <div class="tab-content">
-    <form name="personForm3" ng-submit="nuevoAlmacen()">
+    <form name="AlmacenForm" ng-submit="nuevoAlmacen()">
       <h3> Informaci&oacute;n general</h3>
       <label for="nombreAlmacen">Nombre:</label>
       <input id="nombreAlmacen" type="text" name="nombreAlmacen" ng-model="almacenN.name" required /><br />
