--- a/app/views/app-nuevoCliente.html
+++ b/app/views/app-nuevoCliente.html
@@ -6,62 +6,57 @@
   </ol>
   <div class="page-heading">
     <h1>Nuevo Cliente</h1>
-    <div class="options">
-        <div class="btn-toolbar">
-            <a href="#" class="btn btn-default"><i class="fa fa-fw fa-wrench"></i></a>
-        </div>
-    </div>
   </div>
   <div class="tab-content">
-    <form name="personForm3" ng-submit="nuevo(clienteN)">
+    <form name="ClienteForm" ng-submit="nuevo(clienteN)">
       <h3> Informaci&oacute;n general</h3>
-      <label for="lastNameEdit3">Nombre:</label>
-      <input id="lastNameEdit3" type="text" name="nombre" ng-model="clienteN.name" required /><br />
-      <label for="firstNameEdit3">Correo:</label>
-      <input id="firstNameEdit3" type="text" name="desc" ng-model="clienteN.email" required /><br />
+      <label for="NombreCli">Nombre:</label>
+      <input id="NombreCli" type="text" name="nombre" ng-model="clienteN.name" required /><br />
+      <label for="CorreoCli">Correo:</label>
+      <input id="CorreoCli" type="text" name="correo" ng-model="clienteN.email" required /><br />
       <select id="productSupp" name="productSupp" class="form-control"  ng-model="clienteN.price_id">
         <option value="">Seleccione el precio a aplicar</option>
         <option ng-repeat="option in precios " ng-display="option.name!='Compra'" value="{{option.id}}">{{option.name}}</option>
       </select>
-      <label for="firstNameEdit3">P&aacute;gina:</label>
-      <input id="firstNameEdit3" type="text" name="desc" ng-model="clienteN.website" required /><br />
-      <label for="firstNameEdit3">Tel&eacute;fono:</label>
-      <input id="firstNameEdit3" type="text" name="desc" ng-model="clienteN.phone" required /><br />
+      <label for="PAginaCLi">P&aacute;gina:</label>
+      <input id="PAginaCLi" type="text" name="page" ng-model="clienteN.website" required /><br />
+      <label for="TelCli">Tel&eacute;fono:</label>
+      <input id="TelCli" type="text" name="telefono" ng-model="clienteN.phone" required /><br />
       <br />
       <h3> Datos Fiscales</h3>
-      <label for="lastNameEdit3">Raz&oacute;n Social:</label>
-      <input id="lastNameEdit3" type="text" name="nombre" ng-model="clienteN.razonsocial" required /><br />
-      <label for="firstNameEdit3">RFC:</label>
-      <input id="firstNameEdit3" type="text" name="desc" ng-model="clienteN.rfc" required /><br />
-      <label for="firstNameEdit3">Colonia:</label>
-      <input id="firstNameEdit3" type="text" name="precio" ng-model="clienteN.neighborhood" required /><br />
-      <label for="firstNameEdit3">Calle:</label>
-      <input id="firstNameEdit3" type="text" name="desc" ng-model="clienteN.street" required /><br />
-      <label for="firstNameEdit3">Numero:</label>
-      <input id="firstNameEdit3" type="text" name="desc" ng-model="clienteN.number" required /><br />
-      <label for="firstNameEdit3">Entidad:</label>
-      <input id="firstNameEdit3" type="text" name="desc" ng-model="clienteN.entity" required /><br />
-      <label for="firstNameEdit3">Municipio:</label>
-      <input id="firstNameEdit3" type="text" name="desc" ng-model="clienteN.city" required /><br />
-      <label for="firstNameEdit3">CP:</label>
-      <input id="firstNameEdit3" type="text" name="desc" ng-model="clienteN.zipcode" required /><br />
-      <input type="submit" value="Save" class="btn btn-primary">
+      <label for="razonCli">Raz&oacute;n Social:</label>
+      <input id="razonCli" type="text" name="razon" ng-model="clienteN.razonsocial" required /><br />
+      <label for="rfcCLi">RFC:</label>
+      <input id="rfcCLi" type="text" name="rfc" ng-model="clienteN.rfc" required /><br />
+      <label for="colCli">Colonia:</label>
+      <input id="colCli" type="text" name="colonia" ng-model="clienteN.neighborhood" required /><br />
+      <label for="calleCli">Calle:</label>
+      <input id="calleCli" type="text" name="calle" ng-model="clienteN.street" required /><br />
+      <label for="numCli">Numero:</label>
+      <input id="numCli" type="text" name="numero" ng-model="clienteN.number" required /><br />
+      <label for="EntidadCli">Entidad:</label>
+      <input id="EntidadCli" type="text" name="entidad" ng-model="clienteN.entity" required /><br />
+      <label for="munCLi">Municipio:</label>
+      <input id="munCLi" type="text" name="municipio" ng-model="clienteN.city" required /><br />
+      <label for="cpCli">CP:</label>
+      <input id="cpCli" type="text" name="cp" ng-model="clienteN.zipcode" required /><br />
+      <input type="submit" value="Guardar" class="btn btn-primary">
       <br />
       <h3> Datos de envio</h3>
       <input type="checkbox" name="vehicle" value="Car" ng-model="clienteN.envio" checked> Utilizar la misma direcci&oacute;n<br>
       <div class="form-group" ng-hide="clienteN.envio">
-        <label for="firstNameEdit3">Colonia:</label>
-        <input id="firstNameEdit3" type="text" name="precio" ng-model="clienteN.coloniaEnvio"  /><br />
-        <label for="firstNameEdit3">Calle:</label>
-        <input id="firstNameEdit3" type="text" name="desc" ng-model="clienteN.calleEnvio"  /><br />
-        <label for="firstNameEdit3">Numero:</label>
-        <input id="firstNameEdit3" type="text" name="desc" ng-model="clienteN.numeroEnvio"  /><br />
-        <label for="firstNameEdit3">Entidad:</label>
-        <input id="firstNameEdit3" type="text" name="desc" ng-model="clienteN.entidadEnvio"  /><br />
-        <label for="firstNameEdit3">Municipio:</label>
-        <input id="firstNameEdit3" type="text" name="desc" ng-model="clienteN.municipioEnvio"  /><br />
-        <label for="firstNameEdit3">CP:</label>
-        <input id="firstNameEdit3" type="text" name="desc" ng-model="clienteN.cpEnvio"  /><br />
+        <label for="ColCLiEn">Colonia:</label>
+        <input id="ColCLiEn" type="text" name="colonia" ng-model="clienteN.coloniaEnvio"  /><br />
+        <label for="CalleCliEn">Calle:</label>
+        <input id="CalleCliEn" type="text" name="calle" ng-model="clienteN.calleEnvio"  /><br />
+        <label for="NumeroCLiEn">N&uacute;mero:</label>
+        <input id="NumeroCLiEn" type="text" name="numero" ng-model="clienteN.numeroEnvio"  /><br />
+        <label for="EntCliEn">Entidad:</label>
+        <input id="EntCliEn" type="text" name="entidad" ng-model="clienteN.entidadEnvio"  /><br />
+        <label for="MunCliEn">Municipio:</label>
+        <input id="MunCliEn" type="text" name="mun" ng-model="clienteN.municipioEnvio"  /><br />
+        <label for="coCliEn">CP:</label>
+        <input id="coCliEn" type="text" name="cp" ng-model="clienteN.cpEnvio"  /><br />
         <br />
       </div>
     </form>    
