--- a/app/views/app-nuevoCriterio.html
+++ b/app/views/app-nuevoCriterio.html
@@ -10,7 +10,7 @@
   <div class="tab-content">
     <form>
       <input type="text" ng-model="nombreNCrit" placeholder="Nombre" />
-      <button type="submit" class="btn btn-primary" ng-click="nuevoCrit()">Submit</button>
+      <button type="submit" class="btn btn-primary" ng-click="nuevoCrit()">Guardar</button>
     </form>
   </div>
 </div>
