--- a/app/views/app-nuevoDivisor.html
+++ b/app/views/app-nuevoDivisor.html
@@ -7,19 +7,13 @@
   </ol>
   <div class="page-heading">
     <h1>Nuevo Divisor</h1>
-    <div class="options">
-        <div class="btn-toolbar">
-            <a href="#" class="btn btn-default"><i class="fa fa-fw fa-wrench"></i></a>
-        </div>
-    </div>
   </div>
   <div class="tab-content">
     <form name="personForm3" ng-submit="nuevoDivisor()">
       <h3> Informaci&oacute;n general</h3>
       <label for="nombreDivisor">Nombre:</label>
       <input id="nombreDivisor" type="text" name="nombreDivisor" ng-model="divisorN.name" required /><br />
-   
-      <input type="submit" value="Save" class="btn btn-primary">
+      <input type="submit" value="Guardar" class="btn btn-primary">
       <br />
     </form>    
   </div>
