--- a/app/views/app-vistaClienteInd.html
+++ b/app/views/app-vistaClienteInd.html
@@ -42,13 +42,13 @@
           <table class="table table-hover">
             <thead>
                 <tr>
-                  <th>Razon</th> 
+                  <th>Raz&oacute;n</th> 
                   <th>RFC</th> 
                   <th>Entidad</th> 
                   <th>Municipio</th> 
                   <th>Colonia</th>
                   <th>Calle</th>
-                  <th>Numero</th>
+                  <th>N&uacute;mero</th>
                   <th>CP</th>
                 </tr>
             </thead>
@@ -71,10 +71,10 @@
         <div class="col-md-12">
             <div class="panel" data-widget='{"draggable": "false"}'>
                 <div class="panel-heading">
-                    <h2>Datos de Envio</h2>
+                    <h2>Datos de Env&iacute;o</h2>
                     <div class="panel-ctrls" data-actions-container="" data-action-collapse='{"target": ".panel-body"}'></div>
                     <div class="options">
-                      <a ng-click="agregarEnvio(clientes.id)" class="btn btn-default"><i class="fa fa-fw fa-pencil"></i>Agregar Direccion de envio</a>
+                      <a ng-click="agregarEnvio(clientes.id)" class="btn btn-default"><i class="fa fa-fw fa-pencil"></i>Agregar Direcci&oacute;n de envio</a>
                     </div>
                 </div>
                 <div class="panel-body no-padding">
