--- a/app/views/app-vistaDivisas.html
+++ b/app/views/app-vistaDivisas.html
@@ -7,12 +7,11 @@
 		<h1>Divisas</h1>
 		<div class="options">
 	    	<div class="btn-toolbar">
-	        	<a href="#" class="btn btn-default"><i class="fa fa-fw fa-wrench"></i></a>
+	        	<a href="#/app-nuevaDivisa" class="btn btn-default"><i class="fa fa-fw fa-plus"></i>Agregar DIvisa</a>
 	    	</div>
 		</div>
 	</div>
 	<div class="tab-content">
-		<a href="#/app-nuevaDivisa">Agregar Divisa</a>
 	    <table class="table table-hover">
 	        <thead>
 	            <tr>
