--- a/app/views/app-vistaLocacion.html
+++ b/app/views/app-vistaLocacion.html
@@ -24,7 +24,7 @@
                                 <th>Producto</th>
                                 <th>Variante</th> 
                                 <th>Almacen</th> 
-                                <th>Disponible en Locacion</th> 
+                                <th>Disponible en Locaci&oacute;n</th> 
                             </tr>
                         </thead>
                         <tbody >
