--- a/app/views/app-vistaOrdenesCompra.html
+++ b/app/views/app-vistaOrdenesCompra.html
@@ -1,14 +1,14 @@
 <div ng-controller="CtrlOrdenesC">
     <ol class="breadcrumb">
         <li class=""><a href="#/">Home</a></li>
-        <li class=""><a href="#">Ordenes</a></li>
+        <li class=""><a href="#">&Oacute;rdenes</a></li>
         <li class="active"><a href="#">Compra</a></li>
     </ol>
     <div class="page-heading">            
         <h1>&Oacute;rdenes de compra</h1>
         <div class="options">
             <div class="btn-toolbar">
-                <a ng-click="redNOrdenC()" ng-disabled="isDisabled" class="btn btn-default"><i class="fa fa-fw fa-plus"></i>Crear orden de compra</a>
+                <a ng-click="redNOrdenC()" ng-disabled="isDisabled" class="btn btn-default"><i class="fa fa-fw fa-plus"></i>Crear &oacute;rden de compra</a>
             </div>
         </div>
     </div>
@@ -19,7 +19,7 @@
                     <table class="table table-hover">
                         <thead>
                             <tr class="info">
-                                <th>Orden de compra</th> 
+                                <th>&Oacute;rden de compra</th> 
                                 <th>Proveedor</th> 
                                 <th>Estado</th> 
                                 <th>Pago</th> 
