--- a/app/views/app-vistaProveedor.html
+++ b/app/views/app-vistaProveedor.html
@@ -20,7 +20,7 @@
                 <th>Nombre</th> 
                 <th>Correo</th> 
                 <th>Divisa</th> 
-                <th>Pagina</th> 
+                <th>P&acute;gina</th> 
                 <th>Telefono</th> 
               </tr>
           </thead>
