--- a/app/views/app-vistaTransferencias.html
+++ b/app/views/app-vistaTransferencias.html
@@ -1,7 +1,7 @@
 <div ng-controller="CtrlTransferencias">
     <ol class="breadcrumb">
         <li class=""><a href="#/">Home</a></li>
-        <li class="active"><a href="#">Ordenes</a></li>
+        <li class="active"><a href="#">&Oacute;rdenes</a></li>
         <li class="active"><a href="#">Transferencia</a></li>
     </ol>
     <div class="page-heading">            
