--- a/app/views/login.html
+++ b/app/views/login.html
@@ -15,7 +15,7 @@
                     <span class="input-group-addon">
                       <i class="fa fa-user"></i>
                     </span>
-                    <input type="text" ng-model="us" class="form-control" placeholder="Username" data-parsley-minlength="6" placeholder="At least 6 characters" required>
+                    <input type="text" ng-model="us" class="form-control" placeholder="Usuario" data-parsley-minlength="6" placeholder="At least 6 characters" required>
                   </div>
                             </div>
               </div>
@@ -26,14 +26,14 @@
                     <span class="input-group-addon">
                       <i class="fa fa-key"></i>
                     </span>
-                    <input ng-model="pass" type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
+                    <input ng-model="pass" type="password" class="form-control" id="exampleInputPassword1" placeholder="Contraseña">
                   </div>
                             </div>
               </div>
             
             <div class="panel-footer">
               <div class="clearfix">
-                <input type="submit" class="btn btn-primary pull-right">
+                <input type="submit" class="btn btn-primary pull-right" value="Entrar">
               </div>
             </div>
             </form>
