--- a/app/views/app-nuevoImpuesto.html
+++ b/app/views/app-nuevoImpuesto.html
@@ -8,13 +8,13 @@
     <h1>Nuevo Impuesto</h1>
   </div>
   <div class="tab-content">
-      <form name="personForm2"  ng-submit="subTax(taxN)">
+      <form name="taxForm2"  ng-submit="subTax(taxN)">
         <label for="Nombre">Nombre:</label>
         <input id="Nombre" type="text" name="nombre" ng-model="taxN.name" required /><br />
         <label for="perc">Porcentaje:</label>
         <input id="perc" type="text" name="desc" ng-model="taxN.percentage" required /><br />
         <br />
-        <input type="submit" value="Save" class="btn btn-primary">
+        <input type="submit" value="Guardar" class="btn btn-primary">
       </form>
       <br />
   </div>
