--- a/app/views/app-nuevoProveedor.html
+++ b/app/views/app-nuevoProveedor.html
@@ -6,11 +6,7 @@
   </ol>
   <div class="page-heading">
     <h1>Nuevo Proveedores</h1>
-    <div class="options">
-        <div class="btn-toolbar">
-            <a href="#" class="btn btn-default"><i class="fa fa-fw fa-wrench"></i></a>
-        </div>
-    </div>
+     
   </div>
   <div class="tab-content">
     <form name="supplierForm" ng-submit="sub(proveN)">
@@ -29,7 +25,7 @@
       <input id="supplierPhone" type="text" name="phone" ng-model="proveN.phone" required /><br />
       
       <br />
-      <input type="submit" value="Save" class="btn btn-primary">
+      <input type="submit" value="Guardar" class="btn btn-primary">
     </form>    
   </div>
 
