--- a/app/views/app-subVariantes.html
+++ b/app/views/app-subVariantes.html
@@ -113,7 +113,7 @@ span.td
       
       
       <button  type="submit" class="btn inline">
-        submit
+        Guardar
       </button>
     </form> 
     <hr>   
