--- a/app/views/app-vistaOrdenesVenta.html
+++ b/app/views/app-vistaOrdenesVenta.html
@@ -1,7 +1,7 @@
 <div ng-controller="CtrlOrdenesVenta">
     <ol class="breadcrumb">
         <li class=""><a href="#/">Home</a></li>
-        <li class=""><a href="#">Ordenes</a></li>
+        <li class=""><a href="#">&Oacute;rdenes</a></li>
         <li class="active"><a href="#">Venta</a></li>
     </ol>
     <div class="page-heading">            
@@ -19,7 +19,7 @@
                     <table class="table table-hover">
                         <thead>
                             <tr class="info">
-                                <th>Orden de venta</th> 
+                                <th>&Oacute;rden de venta</th> 
                                 <th>Cliente</th> 
                                 <th>Estado</th> 
                                 <th>Pago</th> 
