--- a/app/views/app-vistaProveedorInd.html
+++ b/app/views/app-vistaProveedorInd.html
@@ -21,7 +21,7 @@
               <th>Nombre</th> 
               <th>Correo</th> 
               <th>Divisa</th> 
-              <th>Pagina</th> 
+              <th>P&aacute;gina</th> 
               <th>Telefono</th> 
             </tr>
         </thead>
